
 ** The strncmp and strncmpi functions now return true if the two input
    strings match, even though the number of characters specified by N
    exceeds the string length.  This behavior more closely matches
    common sense and is Matlab compatible.  Example:

      Octave 5.0 : strncmp ("abc", "abc", 100) => true
      Previously : strncmp ("abc", "abc", 100) => false

 ** The fsolve function has been tweaked to use larger step sizes when
    calculating the Jacobian of a function with finite differences.
    This leads to faster convergence.  The default solver options have
    also changed to be Matlab compatible.  This *may* result in existing
    code producing different results.

          Option     |  New Default   |  Old Default
      ------------------------------------------------
        FinDiffType  |   "forward"    |   "central"
        MaxFunEvals  | 100*length(x0) |     Inf
        TolFun       |     1e-6       |     1e-7
        TolX         |     1e-6       |     1e-7
        Updating     |     "off"      |     "on"

 ** The fminsearch function has changed default solver options for
    Matlab compatibility.  The accuracy option TolFun is now 1e-4 rather
    than 1e-7.  This *may* result in existing code producing different
    results.

 ** The fminbnd function has changed defaults for Matlab compatibility.
    This *may* result in existing code producing different results.

          Option     |  New Default   |  Old Default
      ------------------------------------------------
        MaxFunEvals  |      500       |     Inf
        MaxIter      |      500       |     Inf
        TolX         |     1e-4       |     1e-8

 ** Figure graphic objects have a new property "Number" which is
    read-only and will return the handle (number) of the figure.
    However, if the property "IntegerHandle" has been set to "off" then
    the property will return an empty matrix ([]).
